--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
+    max-width: 1920px;
 }
 
 :root {
@@ -118,14 +119,118 @@
     font-weight: 600;
     text-transform: uppercase;
 }
-.sign-in{
+
+.sign-in {
     background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
 }
 
-.go-rogue{
+.go-rogue {
     background: #4EC5F7;
 }
 
+/* gammer section */
+.gammer-container {
+    display: flex;
+    justify-content: center;
+    padding: 0 240px;
+    gap: 30px;
+    align-items: center;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+
+.gammer-img-container {
+    max-width: 865px;
+    max-height: 489px;
+}
+
+.gammer-content h1 {
+    text-align: right;
+    font-size: 48px;
+    font-weight: 700;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.gammer-content .gammer-content-desc {
+    color: #534C64;
+    text-align: right;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.know-more-container {
+    display: flex;
+    justify-content: end;
+    margin-top: 20px;
+}
+
+.know-more {
+
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+}
+
+.purpose-text {
+    color: #534C64;
+    text-align: right;
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.unleash {
+    font-size: 32px;
+    font-weight: 700;
+
+}
+
+/* video section */
+.video-container {
+    
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 120px;
+}
+
+.video-container h1 {
+    color: #0B0223;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.funny-video {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.video-container>p {
+    color: #534C64;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+.card-container{
+    margin-top: 42px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+.card{
+    width: 342px;
+}
+.card p{
+    margin-top: 15px;
+}
+.overlay{
+    position: relative;
+    top: -200px;
+    left: 200px;
+}
 
 
 
@@ -138,7 +243,8 @@
 @media screen and (max-width:425px) {
 
     .nav-container,
-    .nav-item-section ul {
+    .nav-item-section ul,
+    .gammer-container {
         flex-direction: column;
     }
 
@@ -146,14 +252,47 @@
         margin-top: 20px;
         gap: 30px;
     }
-    .banner-container{
+
+    .banner-container {
         flex-direction: column-reverse;
     }
-    .banner-img{
+
+    .banner-img {
         margin-bottom: 50px;
     }
+
     .banner-img img {
         width: 100%;
         padding: 20px;
+    }
+
+    .gammer-container {
+        padding: 20px;
+    }
+
+    .gammer-content h1 {
+        text-align: center;
+
+    }
+
+    .gammer-content .gammer-content-desc {
+        text-align: center;
+        padding: 10px;
+    }
+
+    .know-more-container {
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .purpose-text {
+        text-align: center;
+    }
+
+
+    .card-container{
+        
+        grid-template-columns: repeat(1,1fr);
+        gap: 40px;
     }
 }
