--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,7 +189,7 @@
 
 /* video section */
 .video-container {
-    
+
     width: 80%;
     margin: 0 auto;
     margin-top: 120px;
@@ -215,21 +215,87 @@
     font-size: 18px;
     font-weight: 400;
 }
-.card-container{
+
+.card-container {
     margin-top: 42px;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
-.card{
+
+.card {
     width: 342px;
 }
-.card p{
+
+.card p {
     margin-top: 15px;
 }
-.overlay{
+
+.overlay {
     position: relative;
     top: -200px;
     left: 200px;
+}
+
+/* feature section */
+.features-container {
+    width: 80%;
+    margin: 100px auto;
+    display: flex;
+    gap: 260px;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.feature-description h1 {
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 700;
+    text-align: right;
+
+}
+
+.play {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+
+.feature-description p {
+    color: #534C64;
+    text-align: right;
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 24px;
+    /* 166.667% */
+}
+
+.moveable-img {
+    position: relative;
+    bottom: 290px;
+    right: 160px;
+    border-radius: 8px;
+}
+.icon-section{
+    width: 80%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    row-gap: 30px;
+}
+.icon{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.icon:hover{
+    border: 2px solid var(--primary-color);
+    border-radius: 50px;
+    color: var(--primary-color);
+    background: #FFF;
 }
 
 
@@ -244,7 +310,7 @@
 
     .nav-container,
     .nav-item-section ul,
-    .gammer-container {
+    .gammer-container,.features-container{
         flex-direction: column;
     }
 
@@ -289,10 +355,29 @@
         text-align: center;
     }
 
+    .card-container {
 
-    .card-container{
-        
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
         gap: 40px;
+    }
+    .feature-description h1{
+        padding: 20px;
+        text-align: center;
+    }
+    .feature-description p{
+        padding: 20px;
+        text-align: center;
+    }
+    .feature-img{
+        width: 100%;
+    }
+    .icon-section{
+       
+        grid-template-columns: repeat(3,1fr);
+        padding: 20px;
+     
+    }
+    .icon img{
+        margin-right: 5px;
     }
 }
