--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,7 +69,7 @@
 
 /* banner section */
 .banner-container {
-    background: hsla(0, 0%, 100%, 0.842);
+    /* background: hsla(0, 0%, 100%, 0.842); */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -81,6 +81,23 @@
     font-weight: 600;
 }
 
+.banner-content {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    background-image: url('/images/Group 14.png');
+    background-repeat: no-repeat;
+}
+
+.banner-img-container {
+    width: 45%;
+}
+
+.banner-img-container img {
+    width: 100%;
+    height: auto;
+
+}
 
 .banner-content h1 {
     font-size: 95px;
@@ -130,17 +147,25 @@
 
 /* gammer section */
 .gammer-container {
+    margin-top: 40px;
+    padding: 10px 120px;
     display: flex;
     justify-content: center;
-    padding: 0 240px;
     gap: 30px;
     align-items: center;
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
 }
 
 .gammer-img-container {
-    max-width: 865px;
-    max-height: 489px;
+    width: 50%;
+}
+
+.gammer-img-container img {
+    width: 100%;
+}
+
+.gammer-content {
+    width: 50%;
 }
 
 .gammer-content h1 {
@@ -219,6 +244,7 @@
 .card-container {
     margin-top: 42px;
     display: grid;
+    gap: 20PX;
     grid-template-columns: repeat(4, 1fr);
 }
 
@@ -244,7 +270,19 @@
     gap: 260px;
     justify-content: center;
     align-items: center;
+}
 
+.feature-description {
+    width: 50%;
+    padding: 20PX;
+}
+
+.feature-img {
+    width: 50%;
+}
+
+.feature-img img {
+    margin-left: 120px;
 
 }
 
@@ -274,28 +312,119 @@
 }
 
 .moveable-img {
+    /* width: 50px; */
     position: relative;
     bottom: 290px;
     right: 160px;
     border-radius: 8px;
 }
-.icon-section{
+
+/* .icon-section {
     width: 80%;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(5, 1fr);
     row-gap: 30px;
+} */
+
+.icon-section{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 50px;
 }
-.icon{
+
+.icon {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.icon:hover{
+
+.icon:hover {
     border: 2px solid var(--primary-color);
     border-radius: 50px;
     color: var(--primary-color);
     background: #FFF;
+}
+
+/* footer section */
+
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #0B0223;
+    height: 80vh;
+    margin-top: 80px;
+}
+
+.footer-title {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 30px;
+}
+
+.footer-title h2 {
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.footer-title h2>span {
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.footer-service {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+
+}
+
+.footer-service h5 {
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.footer-icon {
+    display: flex;
+    gap: 25px;
+    color: #FFF;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+
+}
+
+.footer-text {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    margin-top: 40px;
+    color: rgba(255, 255, 255, 0.60);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.copy-right {
+    color: rgba(255, 255, 255, 0.60);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 40px;
 }
 
 
@@ -310,7 +439,8 @@
 
     .nav-container,
     .nav-item-section ul,
-    .gammer-container,.features-container{
+    .gammer-container,
+    .features-container {
         flex-direction: column;
     }
 
@@ -323,17 +453,27 @@
         flex-direction: column-reverse;
     }
 
-    .banner-img {
+    .banner-img-container {
+
         margin-bottom: 50px;
+        width: 100%;
     }
 
-    .banner-img img {
+    .banner-img-container img {
         width: 100%;
         padding: 20px;
     }
 
     .gammer-container {
         padding: 20px;
+    }
+
+    .gammer-img-container {
+        width: 100%;
+    }
+
+    .gammer-content {
+        width: 100%;
     }
 
     .gammer-content h1 {
@@ -360,24 +500,88 @@
         grid-template-columns: repeat(1, 1fr);
         gap: 40px;
     }
-    .feature-description h1{
-        padding: 20px;
-        text-align: center;
-    }
-    .feature-description p{
-        padding: 20px;
-        text-align: center;
-    }
-    .feature-img{
+
+    .feature-description {
         width: 100%;
     }
-    .icon-section{
-       
-        grid-template-columns: repeat(3,1fr);
+
+    .feature-description h1 {
         padding: 20px;
-     
+        text-align: center;
     }
-    .icon img{
+
+    .feature-description p {
+        padding: 20px;
+        text-align: center;
+    }
+
+    .feature-img {
+        width: 100%;
+
+    }
+
+    .feature-img img {
+        width: 100%;
+        margin-left: 0px;
+
+    }
+
+    .moveable-img {
+        width: 50%;
+        position: relative;
+        bottom: 120px;
+        right: 40px;
+        border-radius: 8px;
+    }
+
+    .icon-section {
+
+        grid-template-columns: repeat(3, 1fr);
+        padding: 20px;
+
+    }
+
+    .icon img {
         margin-right: 5px;
+    }
+    .footer-container{
+        padding: 20PX;
+    }
+
+    .footer-service {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 2rem;
+        padding: 0 30px;
+
+    }
+
+    .footer-service h5 {
+        color: #FFF;
+        font-size: 15px;
+        font-weight: 500;
+    }
+
+    .footer-icon {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 2rem;
+        text-align: center;
+
+    }
+
+    .footer-text {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* row-gap: rem; */
+        /* padding: 0 40px; */
+        text-align: center;
+        font-size: 14px;
+        font-weight: 500;
+    }
+    .copy-right{
+        margin-top: 15px;
+        font-size: 14px;
+        font-weight: 400;
     }
 }
