--- a/styles/styles.css
+++ b/styles/styles.css
@@ -327,16 +327,19 @@
     row-gap: 30px;
 } */
 
-.icon-section{
+.icon-section {
     width: 80%;
+    height: 40vh;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-content: space-evenly;
     padding: 0 50px;
 }
 
 .icon {
+    width: 250px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -499,6 +502,7 @@
 
         grid-template-columns: repeat(1, 1fr);
         gap: 40px;
+        margin: 0;
     }
 
     .feature-description {
@@ -536,15 +540,30 @@
 
     .icon-section {
 
-        grid-template-columns: repeat(3, 1fr);
-        padding: 20px;
+        width: 100%;
+        height: 80vh;
+        gap: 0px;
+        padding: 0;
 
+    }
+
+    .icon{
+        width: 30%;
+        justify-content: unset;
+        margin-left: 8px;
+        height: 10vh;
     }
 
     .icon img {
+        width: 30%;
         margin-right: 5px;
     }
-    .footer-container{
+
+    .icon p {
+        width: 30%;
+    }
+
+    .footer-container {
         padding: 20PX;
     }
 
@@ -579,7 +598,8 @@
         font-size: 14px;
         font-weight: 500;
     }
-    .copy-right{
+
+    .copy-right {
         margin-top: 15px;
         font-size: 14px;
         font-weight: 400;
