--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,12 +255,28 @@
 .card p {
     margin-top: 15px;
 }
-
-.overlay {
+.overly-container{
     position: relative;
-    top: -200px;
-    left: 200px;
+
 }
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.76); 
+    color: #e2e0e0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+  }
+  .overly-container:hover .overlay {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+  }
 
 /* feature section */
 .features-container {
